--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.12.5",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
+    "pixi.js": "^8.4.1",
     "sass-loader": "^14.1.1",
     "store": "^2.0.12",
     "vue": "^3.4.21",
